Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23407

Sprite animations don't transition properly

    XMLWordPrintable

Details

    Description

      In almost any sprite animation where you transition to another sprite (which doesn't have the same first frame) the first frame is taken from the old sprite, usually looking very obvious and bad.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
              aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes