Connection was accidentally of the Queued variety

This connection needs to be direct, because right after that signal is
emitted the next frame is drawn (before we return to the event loop at
least). The sprite updating needs to happen in time for the frame or the
sprites get confused.

Task-number: QTBUG-23407
Change-Id: Ie56465145461486456462154dfafe546fedaaaaa
Reviewed-by: Martin Jones <martin.jones@nokia.com>